:art: Fix font sizes more readability
- Using only rem units for font size

--- a/src/global.css
+++ b/src/global.css
@@ -48,7 +48,7 @@
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", 나눔고딕, "Nanum Gothic", "Noto Sans KR", "Noto Sans CJK KR", arial, 돋움, Dotum, Tahoma, Geneva, sans-serif;
-    font-size: 16px;
+    font-size: 1.125rem;
     line-height: 1.5;
     background-color: var(--base-bg-color);
     color: var(--text-color);
@@ -64,7 +64,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-inline-end: 0;
 
     font-weight: bold;
-    line-height: 1.2;
 }
 
 main > h1 {
@@ -72,11 +71,15 @@ main > h1 {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 3rem;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.5rem;
 }
 
 blockquote {
@@ -108,18 +111,26 @@ a {
     text-decoration: none;
 }
 
+header {
+    margin: 0 0;
+    width: 100%;
+
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
 main {
     width: 768px;
     margin: 1rem auto;
     padding: 1em;
     box-sizing: border-box;
-
-    font-size: 1.2rem;
 }
 
 @media (max-width: 768px) {
     body {
-        font-size: 14px;
+        font-size: 1rem;
     }
 
     main {
@@ -128,10 +139,14 @@ main {
     }
 
     h1 {
-        font-size: 1.75rem;
+        font-size: 2.25rem;
     }
 
     h2 {
+        font-size: 1.75rem;
+    }
+
+    h3 {
         font-size: 1.25rem;
     }
 }
